[package]
name = "rustscan"
version = "2.2.4-rc1"
authors = ["Autumn <autumn@skerritt.blog>"]
edition = "2018"
description = "Faster Nmap Scanning with Rust"
homepage = "https://github.com/rustscan/rustscan"
repository = "https://github.com/rustscan/rustscan"
license = "MIT"
keywords = ["port", "scanning", "nmap"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    ".github/*",
    "pictures/*",
    "rustscan-debbuilder/*",
]

[dependencies]
clap = { version = "4.5.6", features = ["derive", "wrap_help"] }
colored = "2.1.0"
async-std = "1.7.0"
futures = "0.3"
rlimit = "0.10.1"
log = "0.4.0"
env_logger = "0.11.3"
anstream = "=0.6.14"
dirs = "5.0.1"
gcd = "2.0.1"
rand = "0.8.5"
colorful = "0.2.1"
ansi_term = "0.12.1"
toml = "0.8.14"
serde = "1.0.124"
serde_derive = "1.0.116"
cidr-utils = "0.6.1"
itertools = "0.13.0"
hickory-resolver = { version = "0.24.0", features = ["dns-over-rustls"] }
anyhow = "1.0.40"
subprocess = "0.2.6"
text_placeholder = { version = "0.5", features = ["struct_context"] }

[dev-dependencies]
parameterized = "2.0.0"
wait-timeout = "0.2"

[package.metadata.deb]
depends = "$auto, nmap"
section = "rust"

[profile.release]
lto = true
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rustscan"
path = "src/main.rs"
