[package]
name = "rustscan"
version = "2.3.0"
authors = ["Autumn <autumn@skerritt.blog>"]
edition = "2021"
description = "Faster Nmap Scanning with Rust"
homepage = "https://github.com/rustscan/rustscan"
repository = "https://github.com/rustscan/rustscan"
license = "GPL-3.0-only"
keywords = ["port", "scanning", "nmap"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    ".github/*",
    "pictures/*",
    "rustscan-debbuilder/*",
]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-par-stream = "0.1.1"
blackrock2 = "0.1.0"
clap = { version = "4.5.26", features = ["derive", "wrap_help"] }
colored = "3.0.0"
futures = "0.3"
rlimit = "0.10.2"
log = "0.4.22"
env_logger = "0.11.6"
dirs = "5.0.1"
rand = "0.8.5"
colorful = "0.3.2"
ansi_term = "0.12.1"
toml = "0.8.19"
serde = "1.0.124"
serde_derive = "1.0.116"
cidr-utils = "0.6.1"
itertools = "0.14.0"
hickory-resolver = { version = "0.24.2", features = ["dns-over-rustls"] }
anyhow = "1.0.40"
text_placeholder = { version = "0.5", features = ["struct_context"] }

[dev-dependencies]
parameterized = "2.0.0"
wait-timeout = "0.2"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[package.metadata.deb]
depends = "$auto, nmap"
section = "rust"

[profile.test]
debug = "full"


[profile.release]
lto = true
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rustscan"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[[bench]]
name = "benchmark_portscan"
harness = false
